...
    }
    
    
    // MARK: - Helper - Sheet
    
    private func configureCardView() {
        backgroundView.accessibilityIdentifier = "Back"
        
        bottomSheetView.layer.masksToBounds = true
        
        handleView.layer.cornerRadius = handleView.bounds.height / 2
        
        titleLabel.textColor = .neutralDark
...
        let walletRow = UINib(nibName: MiniWalletItemRow.className, bundle: nil)
        tableView.register(walletRow, forCellReuseIdentifier: MiniWalletItemRow.className)
        
        let buttonRow = UINib(nibName: ButtonRow.className, bundle: nil)
        tableView.register(buttonRow, forCellReuseIdentifier: ButtonRow.className)
        
        tableView.accessibilityIdentifier = "miniWalletTableView"
        
        tableView.tableFooterView = UIView()
        
        // Determine selected indexPath
        if let selectedWalletItem = viewModel.selectedWalletItem,
            let row = viewModel.tableViewWalletItems.firstIndex(of: selectedWalletItem) {
...
                           isBankAccountDisabled: isBankAccountDisabled,
                           indexPath: indexPath,
                           selectedIndexPath: selectedIndexPath)
            return cell
        } else if walletItems.count == indexPath.row { // Bank Button
            guard let cell = tableView.dequeueReusableCell(withIdentifier: ButtonRow.className, for: indexPath) as? ButtonRow else { fatalError("Incorrect Cell Type") }
            cell.configure(image: UIImage(named: "ic_add"), title: "Add Bank Account", isEnabled: !isBankAccountDisabled)
            return cell
        } else if walletItems.count + 1 == indexPath.row { // Card Button
            guard let cell = tableView.dequeueReusableCell(withIdentifier: ButtonRow.className, for: indexPath) as? ButtonRow else { fatalError("Incorrect Cell Type") }
            cell.configure(image: UIImage(named: "ic_add"), title: "Add Credit/Debit Card", isEnabled: !isCreditCardDisabled)
            return cell
        } else {
            fatalError("Invalid IndexPath")
        }
    }
}
...
