...
                    <rect key="frame" x="12" y="12" width="16" height="16"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="16" id="8qa-3H-aXx"/>
                        <constraint firstAttribute="width" constant="16" id="vPy-fr-hNv"/>
                    </constraints>
                </imageView>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bill" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nPS-2U-UtK">
                    <rect key="frame" x="36" y="12" width="17" height="14.333333333333336"/>
                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                    <color key="textColor" name="neutral_darker"/>
                    <nil key="highlightedColor"/>
                </label>
                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_caret" translatesAutoresizingMaskIntoConstraints="NO" id="MgB-v7-hjc">
...
