...
        errorLabel.textColor = .neutralDark
        errorLabel.text = NSLocalizedString("Unable to retrieve data at this time. Please try again later.", comment: "")
    }
    
    private func addAccessibility() {
        bankButton.isAccessibilityElement = true
        bankButton.accessibilityLabel = NSLocalizedString("Add bank account", comment: "")
        miniBankButton.isAccessibilityElement = true
        miniBankButton.accessibilityLabel = NSLocalizedString("Add bank account", comment: "")
        
        creditCardButton.isAccessibilityElement = true
        creditCardButton.accessibilityLabel = NSLocalizedString("Add credit card", comment: "")
        miniCreditCardButton.isAccessibilityElement = true
...
